--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    
+    <title>Data science portfolio | Home</title>
+    </meta>
+    </meta>
+  </head>
+</html>
+  
